@@ -1,5 +1,8 @@
 package fr.univrennes.istic.l2gen.geometrie;
 
+import java.io.BufferedWriter;
+import java.io.FileWriter;
+import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -87,7 +90,7 @@ public class Ligne implements IForme {
     @Override
     public IForme dupliquer() {
         List <Double> li = this.getSommets();
-        Ligne l2=new Ligne(li.getFirst(),li.get(1));
+        Ligne l2=new Ligne(li.get(0),li.get(1));
         while(!li.isEmpty()){
             
         }
@@ -104,5 +107,18 @@ public class Ligne implements IForme {
     @Override
     public void colorier(String... couleurs) {
 
+    }
+    public void createSvgFile() {
+    String svgContent = "<svg xmlns=\"http://www.w3.org/2000/svg\">\n";
+    
+
+        try (BufferedWriter writer = new BufferedWriter(new FileWriter("/l2gen_5_coupdumarteau/src/fr/univrennes/istic/l2gen/geometrie/Ligne.svg"))) {
+            writer.write(svgContent);
+            writer.write(enSVG());
+            writer.write("</svg>");
+            System.out.println("Fichier créé avec succès !");
+        } catch (IOException e) {
+            System.err.println("Erreur lors de la création du fichier : " + e.getMessage());
+        }
     }
 }
